feat: Add ModuleModelValueBridge for full-text indexing (thanx to Masuda-sensei)
- Added `ModuleModelValueBridge` class to extract text from `ModuleModel` beanBytes for full-text indexing.
- Modified `ModuleModel` to remove redundant `fullText` field and related methods.
- Updated `DocumentModel` to use `ModuleModelValueBridge` for indexing `modules` collection.
- Created `DocumentRoutingBinder` to handle routing logic based on document status.
- Updated `JapaneseAnalysisConfigurer` to include a lowercase token filter.
- Adjusted `FindTask` to use regular expression search for more flexible patient name searches.
- Modified `PnsServiceImpl` to handle multiple statuses in the initial index creation.
- Updated `PatientServiceImpl` to adjust full-text search logic in `getPatientList` method.